--- a/templates/student_homepage.html
+++ b/templates/student_homepage.html
@@ -148,7 +148,7 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="GradeBook Logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="GradeBook Logo">
             <h1>GradeBook</h1>
         </div>
 
@@ -160,7 +160,7 @@
 
         <div class="user-profile">
             <button>
-                <img src="images/s.png" alt="User Icon">
+                <img src="{{ url_for('static', filename='images/s.png') }}" alt="User Icon">
             </button>
         </div>
     </div>
@@ -168,7 +168,7 @@
     <div class="container">
 
         <div class="left-section">
-            <img src="images/desk.png"alt="Illustration of user at desk">
+            <img src="{{ url_for('static', filename='images/desk.png') }}"alt="Illustration of user at desk">
         </div>
 
         <div class="right-section">
