--- a/templates/student_homepage.html
+++ b/templates/student_homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GradeBook Teacher Interface</title>
+    <title>GradeBook Student Interface</title>
     <style>
         body {
             font-family: Arial, sans-serif;
